feat:auot compile and preprocess task, add ??(exist) operator

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-qunit" : "~0.5.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch" : "~v0.6.1",
+    "grunt-sed": "~0.1.1",
     "jison": "~0.4.13",
     "ebnf-parser": "*",
     "lex-parser" : ""
